# send_group_emails_server

./: .gitignore  Cargo.toml  README.md  circuit.circom  main.rs  proof.txt  prove_signature.rs  server_setup.rs  verification_key.json
.cursor/: scratchpad.md
database/: Cargo.toml
database/src/: main.rs
database_lib/: Cargo.toml
database_lib/src/: lib.rs
fetch_data/: Cargo.toml
fetch_data/src/: main.rs
fetch_data_lib/: Cargo.toml
fetch_data_lib/src/: lib.rs
server_setup/: Cargo.toml  emails.db
server_setup/src/: command.sh  main.rs  working_setup.rs  working_setup_not working.rs
src/: proof.txt
verify_proof_lib/: Cargo.toml
verify_proof_lib/src/: lib.rs  util.rs
verify_signature/: Cargo.toml  proof.json  verification_key.json
verify_signature/src/: main.rs
