[package]
name = "prove_signature"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-groth16 = "0.4"
ark-bn254 = "0.4"
ark-serialize = "0.4"
ark-std = { version = "0.4", features = ["std"] }
ark-snark = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rand = "0.8"
num-bigint = "0.4"  # Add this for BigInt support
tokio = { version = "1", features = ["full"] }
fs = "0.0.5"
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
