[package]
name = "fetch_data_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.140"
base64 = "0.21"
sha2 = "0.10.9"
serde = { version = "1.0", features = ["derive"] }
num-bigint = "0.4.6"
num-traits = "0.2.19"
