[package]
name = "verify_proof_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-bn254 = "0.5.0"
ark-groth16 = "0.5.0"
ark-serialize = "0.5.0"
ark-snark = "0.5.1"
ark-ff        = "0.5"
num-bigint = "0.4.6"
rand = "0.9.1"
serde_json = "1.0.140"
axum = "0.8.4"
lettre = { version = "0.10", features = ["smtp-transport", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
ark-ec      = "0.5"   # ← new
anyhow      = "1"     # ← new
panic = "0.4.0"
pod2 = { git="https://github.com/0xPARC/pod2", rev="115c3c11524a0426a1b74db26ea0c78bf90bddb8", features = ["time"]}
plonky2 = { git = "https://github.com/0xPolygonZero/plonky2"}
